@@ -1,6 +1,6 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version "5.2.0"
     id 'java-library'
+    id 'com.github.johnrengelman.shadow' version "5.2.0"
     id 'org.javamodularity.moduleplugin' version '1.6.0'
 }
 
@@ -9,12 +9,11 @@ apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'org.javamodularity.moduleplugin'
 
 group 'com.hiddenswitch'
-version '0.9.0'
 
 def vendor = "Parallel Universe Software Co."
 def quasarJar = "${rootProject.projectDir}/quasar-core/build/libs/quasar-core-${version}.jar"
 def guavaVer = '26.0-jre'
-def asmVer = '7.0'
+def asmVer = '7.2'
 def moduleName = 'co.paralleluniverse.quasar.core'
 
 repositories {
@@ -81,44 +80,44 @@ sourceSets {
 }
 
 dependencies {
-    compile("io.dropwizard.metrics:metrics-core:4.1.0-rc2") {
+    implementation("io.dropwizard.metrics:metrics-core:4.1.2") {
         exclude group: 'org.slf4j', module: '*'
     }
 
-    compile "io.dropwizard.metrics:metrics-jmx:4.1.0-rc2"
+    implementation "io.dropwizard.metrics:metrics-jmx:4.1.2"
 
     provided "org.apache.ant:ant:1.10.5"
-    compile 'com.google.errorprone:error_prone_annotations:2.3.2'
+    implementation 'com.google.errorprone:error_prone_annotations:2.1.3'
     compile("com.google.guava:guava:${guavaVer}") {
         exclude group: 'com.google.errorprone', module: '*'
         exclude group: 'org.checkerframework', module: 'checker-qual'
     }
     timewarp 'co.paralleluniverse:timewarp:0.2.0-SNAPSHOT'
-    testCompile 'co.paralleluniverse:timewarp:0.2.0-SNAPSHOT'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile('junit:junit:4.12') {
+    testImplementation 'co.paralleluniverse:timewarp:0.2.0-SNAPSHOT'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    testImplementation('junit:junit:4.12') {
         exclude group: 'org.hamcrest', module: '*'
     }
-    testCompile('com.google.truth:truth:0.42') {
+    testImplementation('com.google.truth:truth:0.42') {
         exclude group: 'com.google.guava', module: 'guava'
         exclude group: 'com.google.errorprone', module: '*'
         exclude group: 'junit', module: 'junit'
     }
 
-    testCompile('org.mockito:mockito-core:2.24.5') {
+    testImplementation('org.mockito:mockito-core:2.24.5') {
         exclude group: "org.ow2.asm", module: '*'
         exclude group: "net.bytebuddy", module: '*'
     }
     testRuntime "net.bytebuddy:byte-buddy:1.9.2" // for Mockito
-    testCompile "org.ow2.asm:asm:$asmVer"
+    testImplementation "org.ow2.asm:asm:$asmVer"
 
     jmhCompile 'org.openjdk.jmh:jmh-core:1.21'
     jmhCompile 'org.openjdk.jmh:jmh-generator-annprocess:1.21'
 
     annotationProcessor 'org.kohsuke.metainf-services:metainf-services:1.8'
 
-    compile "org.hdrhistogram:HdrHistogram:2.1.10"
-    compile("org.latencyutils:LatencyUtils:2.0.3") {
+    implementation "org.hdrhistogram:HdrHistogram:2.1.10"
+    implementation("org.latencyutils:LatencyUtils:2.0.3") {
         exclude group: "org.hdrhistogram", module: '*'
     }
     compile "org.ow2.asm:asm:$asmVer"
@@ -127,12 +126,16 @@ dependencies {
     compile "org.ow2.asm:asm-util:$asmVer"
 
     // The exclusions are needed to get asm 5.0.4 whilst Kryo still depends on 5.0.3
-    compile "org.objenesis:objenesis:2.6"
-    compile("com.esotericsoftware:kryo:4.0.2") {
+    implementation "org.objenesis:objenesis:2.6"
+    implementation('com.esotericsoftware:reflectasm:1.11.3') {
+        exclude group: "org.ow2.asm", module: '*'
+        exclude group: 'org.objectweb.asm', module: '*'
+    }
+    implementation("com.esotericsoftware:kryo:4.0.2") {
         exclude group: "org.ow2.asm", module: '*'
         exclude group: "org.objenesis", module: '*'
     }
-    compile("de.javakaffee:kryo-serializers:0.42") {
+    implementation("de.javakaffee:kryo-serializers:0.42") {
         exclude group: "com.esotericsoftware", module: '*'
         exclude group: "com.esotericsoftware.kryo", module: '*'
     }
@@ -234,24 +237,71 @@ test {
     }
 }
 
-jar {
+// remove default artifact
+configurations.runtime.artifacts.with { archives ->
+    archives.each {
+        archives.remove(it)
+    }
+}
+
+[jar]*.enabled = false
+
+artifacts {
+    archives shadowJar
+    shadowedJar shadowJar
+}
+
+assemble.dependsOn shadowJar
+check.dependsOn test
+
+tasks.withType(JavaExec) {
+    classpath += sourceSets.test.runtimeClasspath + sourceSets.test.output
+}
+run.dependsOn compileJava, testClasses
+
+javadoc {
+    options.encoding = 'UTF-8'
+    source = sourceSets.main.allJava
+}
+
+assemble.dependsOn shadowJar
+build.dependsOn shadowJar
+
+shadowJar {
+    classifier = '' // overwrite jar
+    destinationDir = file("$buildDir/libs")
+
+    from sourceSets.main.output
+
+    configurations = [project.configurations.runtime]
+    dependencies {
+        include(dependency('org.ow2.asm:.*:.*'))
+//            include(dependency(':high-scale-lib'))
+    }
+    exclude 'META-INF/INDEX.LIST'
+//      exclude 'module-info.class'
+
+    relocate 'org.objectweb.asm.', 'co.paralleluniverse.asm.'
+//        relocate 'org.cliffc.high_scale_lib.', 'co.paralleluniverse.high_scale_lib.'
+
     manifest {
         attributes(
-                "Implementation-Title": project.name,
-                "Implementation-Version": version,
-                "Implementation-Vendor": vendor,
-                "Premain-Class": "co.paralleluniverse.fibers.instrument.JavaAgent",
-                "Agent-Class": "co.paralleluniverse.fibers.instrument.JavaAgent",
-                "Can-Retransform-Classes": "true",
-                "Can-Redefine-Classes": "true",
-                "Built-By": System.getProperty("user.name"),
-                "Automatic-Module-Name": moduleName,
+                "Implementation-Title"      :   project.name,
+                "Implementation-Version"    :   version,
+                "Implementation-Vendor"     :   vendor,
+                "Automatic-Module-Name"     :   project.moduleName,
+                "Premain-Class"             :   "co.paralleluniverse.fibers.instrument.JavaAgent",
+                "Agent-Class"               :   "co.paralleluniverse.fibers.instrument.JavaAgent",
+                "Can-Retransform-Classes"   :   "true",
+                "Can-Redefine-Classes"      :   "true",
+                "Built-By"                  :   System.getProperty("user.name"),
         )
     }
 }
 
 tasks.withType(JavaExec) {
     classpath += sourceSets.test.runtimeClasspath + sourceSets.test.output + sourceSets.jmh.runtimeClasspath + sourceSets.jmh.output
+    jvmArgs += ['--add-opens', 'java.base/java.lang=co.paralleluniverse.quasar.core']
 }
 
 configure(javadoc) {
@@ -278,15 +328,6 @@ task artifacts {
         }
     }
 }
-
-// remove default artifact
-configurations.runtime.artifacts.with { archives ->
-    archives.each {
-        archives.remove(it)
-    }
-}
-
-//[jar]*.enabled = false
 
 def scanAndInstrument(SourceSet sset, configs) {
     def cp = '' + sset.output.classesDirs.asPath + ':' + sset.output.resourcesDir + ':' + configs*.asPath.join(':')
