@@ -8,10 +8,12 @@ fi
 
 # Executes the fat jar of the network server using the Embedded application by default
 java --add-modules java.se \
+  --add-opens java.base/java.util.concurrent.atomic=kryo \
+  --add-opens java.base/java.lang=co.paralleluniverse.quasar.core \
   --add-exports java.base/jdk.internal.ref=ALL-UNNAMED \
   --add-opens java.base/java.lang=ALL-UNNAMED \
   --add-opens java.base/java.nio=ALL-UNNAMED \
   --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
   --add-opens java.management/sun.management=ALL-UNNAMED \
   --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED \
-  -cp /data/net-${SPELLSOURCE_VERSION}.jar com.hiddenswitch.spellsource.applications.Clustered
+  -cp /data/net-${SPELLSOURCE_VERSION}-all.jar com.hiddenswitch.spellsource.applications.net.Clustered
